--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>MAFIA: COSA NOSTRA PRESTIGE</title>
+    <title>MAFIA: Beta V2</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700;900&display=swap" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
@@ -67,7 +67,7 @@
 
     <section id="screen-auth" class="screen active justify-center">
         <div class="glass p-10 text-center">
-            <h1 class="text-4xl font-black mb-10 italic text-accent tracking-tighter">COSA NOSTRA</h1>
+            <h1 class="text-4xl font-black mb-10 italic text-accent tracking-tighter">Mafia Beta V2</h1>
             <div class="space-y-4">
                 <input type="text" id="user-name" placeholder="ادخل اسمك هنا..." class="w-full bg-black/40 border border-white/20 p-5 rounded-2xl text-center outline-none focus:border-accent text-white">
                 <input type="text" id="room-id" placeholder="رمز الجلسة" class="w-full bg-black/40 border border-white/20 p-5 rounded-2xl text-center outline-none transition-all">
